# SpikingForge

./: .gitignore  README.md  brief.md  example.py  learning.py  pyproject.toml
configs/: example.yaml
examples/: train_example.py
src/spikingforge/: __init__.py  cli.py  config.py  core.py  export.py  learning.py  utils.py
tests/: test_core.py  test_export.py  test_learning.py
